--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,17 +1,17 @@
 <footer>
     <div class="container">
-        <p>&copy; {% now "Y" %} Escola Estadual Professor José Ranieri. Todos os direitos reservados.</p>
-        <p>Desenvolvido com Django. Fuso horário: {% now "P" %}</p>
-        <!-- Links sociais ou de contato opcionais -->
+        <p>&copy; {% now "Y" %} Escola Estadual Professor José Ranieri. </p>
+        <p>Programa de Ensino Integral (PEI)</p>
+        <p>Horário: {% now "P" %}</p>
         <div class="mt-1">
-            <a href="#" class="text-secondary mx-auto">
-                <i class="fab fa-facebook-f mr-1"></i>
+            <a href="https://www.facebook.com/share/1Nrs6fcBFt/" class="text-secondary mx-auto">
+                <i class="fab fa-facebook-f fa-lg mr-1"></i>
             </a>
-            <a href="#" class="text-secondary mx-auto">
-                <i class="fab fa-instagram mr-1"></i>
+            <a href="https://www.instagram.com/joseranieribauru?igsh=OWQzcGphZmVmN2dq" class="text-secondary mx-auto">
+                <i class="fab fa-instagram fa-lg mr-1"></i>
             </a>
-            <a href="#" class="text-secondary mx-auto">
-                <i class="fas fa-phone mr-1"></i>
+            <a href="https://youtube.com/@escolajoseranieri?si=e8UiRDWJNQZXA9C7" class="text-secondary mx-auto">
+                <i class="fas fa-phone fa-lg mr-1"></i>
             </a>
         </div>
     </div>
