--- a/coral/templates/coral/repertorio_list.html
+++ b/coral/templates/coral/repertorio_list.html
@@ -21,6 +21,8 @@
                             <i class="fas fa-file-audio"></i>
                         {% elif musica.tipo_arquivo == 'video' %}
                             <i class="fas fa-file-video"></i>
+                        {% elif musica.tipo_arquivo == 'youtube' %}
+                            <i class="fab fa-youtube"></i>
                         {% endif %}
 
                         <h3>{{ musica.titulo }}</h3>
@@ -30,15 +32,29 @@
                         {% endif %}
 
                         <div class="mt-3 w-100">
-                            {% if musica.tipo_arquivo == 'audio' %}
+                            {% if musica.tipo_arquivo == 'youtube' and musica.video_url %}
+                                <div class="video-container mb-3" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px;">
+                                    <iframe
+                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                                        src="{{ musica.video_url }}"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            {% endif %}
+
+                            {% if musica.tipo_arquivo == 'audio' and musica.arquivo %}
                                 <audio controls class="w-100 mb-2">
                                     <source src="{{ musica.arquivo.url }}" type="audio/mpeg">
                                 </audio>
                             {% endif %}
 
-                            <a href="{{ musica.arquivo.url }}" class="btn-primary-custom" target="_blank" download>
-                                Baixar {{ musica.get_tipo_arquivo_display }}
-                            </a>
+                            {% if musica.arquivo %}
+                                <a href="{{ musica.arquivo.url }}" class="btn-primary-custom" target="_blank" download>
+                                    Baixar {{ musica.get_tipo_arquivo_display }}
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
