--- a/coral/templates/coral/repertorio_list.html
+++ b/coral/templates/coral/repertorio_list.html
@@ -15,14 +15,17 @@
             {% for musica in musicas %}
                 <div class="col-md-4 mb-4">
                     <div class="btn-coral-choice">
-                        {% if musica.tipo_arquivo == 'pdf' %}
+                        {# Prioriza ícone do YouTube se houver URL #}
+                        {% if musica.video_url %}
+                            <i class="fab fa-youtube"></i>
+                        {% elif musica.tipo_arquivo == 'pdf' %}
                             <i class="fas fa-file-pdf"></i>
                         {% elif musica.tipo_arquivo == 'audio' %}
                             <i class="fas fa-file-audio"></i>
                         {% elif musica.tipo_arquivo == 'video' %}
                             <i class="fas fa-file-video"></i>
-                        {% elif musica.tipo_arquivo == 'youtube' %}
-                            <i class="fab fa-youtube"></i>
+                        {% else %}
+                            <i class="fas fa-music"></i>
                         {% endif %}
 
                         <h3>{{ musica.titulo }}</h3>
@@ -32,7 +35,8 @@
                         {% endif %}
 
                         <div class="mt-3 w-100">
-                            {% if musica.tipo_arquivo == 'youtube' and musica.video_url %}
+                            {# Exibe o vídeo se a URL existir, independente do tipo_arquivo #}
+                            {% if musica.video_url %}
                                 <div class="video-container mb-3" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px;">
                                     <iframe
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
@@ -52,7 +56,7 @@
 
                             {% if musica.arquivo %}
                                 <a href="{{ musica.arquivo.url }}" class="btn-primary-custom" target="_blank" download>
-                                    Baixar {{ musica.get_tipo_arquivo_display }}
+                                    Baixar {{ musica.get_tipo_arquivo_display|default:"Arquivo" }}
                                 </a>
                             {% endif %}
                         </div>
