--- a/coral/templates/coral/repertorio_list.html
+++ b/coral/templates/coral/repertorio_list.html
@@ -15,7 +15,7 @@
             {% for musica in musicas %}
                 <div class="col-md-4 mb-4">
                     <div class="btn-coral-choice">
-                        {% if musica.tipo_arquivo == 'youtube' or musica.video_url %}
+                        {% if musica.tipo_arquivo == 'youtube' or musica.video_id %}
                             <i class="fab fa-youtube"></i>
                         {% elif musica.tipo_arquivo == 'pdf' %}
                             <i class="fas fa-file-pdf"></i>
@@ -34,11 +34,11 @@
                         {% endif %}
 
                         <div class="mt-3 w-100">
-                            {% if musica.video_url %}
+                            {% if musica.video_id %}
                                 <div class="video-container mb-3" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px;">
                                     <iframe
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                                        src="{{ musica.video_url }}"
+                                        src="https://www.youtube.com/embed/{{ musica.video_id }}"
                                         frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen>
