--- a/coral/templates/coral/repertorio_list.html
+++ b/coral/templates/coral/repertorio_list.html
@@ -42,7 +42,8 @@
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
                                         src="https://www.youtube.com/embed/{{ musica.video_id|slice:':11' }}"
                                         frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                        referrerpolicy="strict-origin-when-cross-origin"
                                         allowfullscreen>
                                     </iframe>
                                 </div>
