--- a/coral/templates/coral/repertorio_list.html
+++ b/coral/templates/coral/repertorio_list.html
@@ -40,10 +40,10 @@
                                 <div class="video-container mb-3" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px; background: #000;">
                                     <iframe
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                                        src="https://www.youtube.com/embed/{{ musica.video_id|slice:':11' }}"
+                                        src="https://www.youtube.com/embed/{{ musica.video_id|slice:':11' }}?origin=https://www.escolajoseranieri.com.br"
                                         frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                        referrerpolicy="strict-origin-when-cross-origin"
+                                        referrerpolicy="no-referrer-when-downgrade"
                                         allowfullscreen>
                                     </iframe>
                                 </div>
