--- a/coral/templates/coral/repertorio_list.html
+++ b/coral/templates/coral/repertorio_list.html
@@ -37,27 +37,19 @@
 
                         <div class="mt-3 w-100">
                             {% if musica.video_id %}
-                                <div class="video-iframe-container mb-3">
-                                    <iframe
-                                        src="https://www.youtube.com/embed/{{ musica.video_id }}"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                        referrerpolicy="no-referrer-when-downgrade"
-                                        allowfullscreen>
-                                    </iframe>
+                                <div class="mb-3">
+                                    <a href="https://www.youtube.com/watch?v={{ musica.video_id }}" target="_blank" class="d-block text-break">
+                                        https://www.youtube.com/watch?v={{ musica.video_id }}
+                                    </a>
                                 </div>
                             {% endif %}
 
                             {% if musica.arquivo %}
-                                {% if '.mp3' in musica.arquivo.name or '.wav' in musica.arquivo.name %}
-                                    <audio controls class="w-100 mb-2">
-                                        <source src="{{ musica.arquivo.url }}" type="audio/mpeg">
-                                    </audio>
-                                {% endif %}
-
-                                <a href="{{ musica.arquivo.url }}" class="btn-primary-custom" target="_blank" download>
-                                    Baixar Arquivo
-                                </a>
+                                <div class="mb-2">
+                                    <a href="{{ musica.arquivo.url }}" class="btn-primary-custom" target="_blank" download>
+                                        Baixar Arquivo ({{ musica.extensao_arquivo|upper }})
+                                    </a>
+                                </div>
                             {% endif %}
                         </div>
                     </div>
